# ocropus-git

./: .hgignore  Jamfile  Makefile.am  Makefile.in  README  SConstruct  build  configure  configure.ac  genAM.py  generate_version_cc.sh  ubuntu  ubuntu-packages  uninstall
commands/: ocr-char-components.cc  ocr-distance.cc  ocr-extract-lines.cc  ocr-rough.cc  ocropus-group.cc  ocropus.cc
commands/OLD/: ocr-extract-lines.cc  ocr-ldetect-nnbr.cc
data/testimages/: AIM-1208.tif
ext/lua/: .sconsign.dblite  Makefile.in
ext/tolua++/: .sconsign.dblite  Makefile.in  tolua++.h  tolua_map.c
ext/voronoi/: geometry.cc  main-voronoi-ocropus.cc  voronoi-ocropus.cc  voronoi-ocropus.h
extras/cseg2mnist/: Makefile  README  cseg2mnist.cc  mnist.h
extras/eval-scripts/: exam-log  experiment  (+3 more)
include/: glclass.h  gldataset.h  glfmaps.h  glinerec.h  gliovecs.h  grouper.h  lattice.h  line-info.h  ocr-layout-rast-public.h  ocr-layout.h  ocr-openfst.h  ocr-pfst.h  ocr-tesseract.h  ocropus.h  tesseract.h
ocr-autoclean/: main-ocr-orientation.cc  main-ocr-thresholding.cc  ocr-orientation.cc  ocr-orientation.h  ocr-thresholding.cc  ocr-thresholding.h
ocr-binarize/: main-ocr-binarize-otsu.cc  main-ocr-binarize-sauvola.cc  ocr-binarize-otsu.cc  ocr-binarize-otsu.h  ocr-binarize-range.cc  ocr-binarize-sauvola.cc  ocr-binarize-sauvola.h  ocr-cleanup.cc
ocr-cleaning/: main-ocr-orientation.cc  main-ocr-thresholding.cc  ocr-orientation.cc  ocr-orientation.h  ocr-thresholding.cc
ocr-commands/: align.cc  buildhtml.cc  cinfo.cc  evaluation.cc  langmod.cc  lines2fsts.cc  ocr-commands.cc  ocr-commands.h
ocr-langmods/: a-star.cc  a-star.h  beam-search.cc  beam-search.h  fst-em.h  fst-io.cc  fst-io.h  fstbuilder.cc  fstbuilder.h  fstmodels.cc  fstmodels.h  fstutil.cc  fstutil.h  langmod-shortest-path.h  langmods.h  lattice.cc  lattice.h
ocr-layout/: line-info.cc  line-info.h  lines.cc  lines.h  ocr-char-stats.cc  ocr-char-stats.h  ocr-classify-zones.cc  ocr-color-encode-layout.cc  ocr-color-encode-layout.h  ocr-ctextline-rast-extended.cc  ocr-ctextline-rast-extended.h  ocr-ctextline-rast.cc  ocr-ctextline-rast.h  ocr-deskew-rast.cc  ocr-deskew-rast.h  ocr-doc-clean-concomp.cc  ocr-doc-clean-concomp.h  ocr-doc-clean.cc  ocr-doc-clean.h  ocr-extract-gutters.cc  ocr-layout-1cp.cc  ocr-layout-internal.h  ocr-layout-rast.cc  ocr-layout-rast.h  ocr-layout-rast1.cc  ocr-layout-smear.cc  ocr-layout-structs.h  ocr-layout.h  ocr-noisefilter.cc  ocr-pageframe-rast.cc  ocr-pageframe-rast.h  ocr-pageseg-wcuts.cc  ocr-pageseg-wcuts.h  ocr-pageseg-xycut.cc  ocr-pageseg-xycut.h  ocr-reading-order.cc  ocr-segmentations.cc  ocr-segmentations.h  ocr-text-image-seg.cc  ocr-text-image-seg.h  (+9 more)
ocr-leptonica/: ocr-text-image-seg-leptonica.cc  ocr-text-image-seg-leptonica.h
ocr-line/: glbits.cc  glclass.cc  glclass.h  glclass2.cc  glcuts.cc  glcuts.h  gldataset.h  glfmaps.cc  glfmaps.h  glinerec.h  gliovecs.h  glutils.h  linerec.cc
ocr-lineseg/: ocr-cseg-ccs.cc  ocr-cseg-projection.cc  seg-ccs.cc  seg-cuts.cc  seg-skel.cc
ocr-openfst/: fstbuilder.cc  fstmodels.cc  fstutil.cc  fstutil.h
ocr-pfst/: README  a-star.cc  a-star.h  beam-search.cc  beam-search.h  fst-em.cc  langmod-shortest-path.cc  langmods.h  lattice.cc  lattice.h  ocr-pfst.h  ocrofst-impl.cc  ocrofst-io.cc  ocrofst-util.cc  ofst-io.cc  ofst-io.h
ocr-tesseract/: ocr-tesseract.h  tesseract.cc
ocr-utils/: arraypaint.h  bookstore.cc  bookstore.cc.~1~  bookstore.cc.~2~  bookstore.cc.~3~  bookstore.h  bookstore.h.~1~  components.cc  components.h  didegrade.cc  didegrade.h  docproc.h  editdist.cc  editdist.h  enumerator.h  grid.h  grouper.cc  grouper.h  init-ocropus.cc  init-ocropus.h  linesegs.cc  linesegs.h  logger.cc  logger.h  narray-binio.h  narray-io.cc  narray-io.h  ocr-utils.cc  ocr-utils.h  ocrinterfaces.h  ocropus.h  pages.h  pagesegs.cc  pagesegs.h  resource-path.cc  resource-path.h  segmentation.h  stringutil.h  sysutil.cc  sysutil.h  (+2 more)
ocr-voronoi/: 0001.bin.tiff  read_image.cc  voronoi-ocropus.h
ocroscript/: Makefile.am  Makefile.in  README  editline-stub.cc  fst-stub.cc  fst-util.h  fst.pkg  graphics.pkg  image.pkg  imgbitscmds.pkg  imgrlecmds.pkg  layout.pkg  narray.pkg  nustring.pkg  ocr-util.h  ocr.pkg  ocroscript-simple.cc  ocroscript.cc  ocrotoplevel.cc  ocrotoplevel.h  openfst.pkg  pfst.pkg  render-and-degrade.py  render.py  run-tests  run-toplevels  segview.py  sysutil.pkg  tesseract.pkg
ocroscript/drivers/: ocr-simple-cleanup.lua
ocroscript/scripts/: TODO  align-lines-wordwise.lua  align-tesseract.lua  align.lua  autobin.lua  build-ngram-model.lua  degrade.lua  deskew.lua  dictutils.lua  editdist.lua  erode3.lua  eval-bpnet-on-words.lua  eval-on-word-list.lua  extract-lines.lua  hocr-to-text.lua  layout.lua  line-align.lua  line-clean.lua  pod.lua  rec-bpnet.lua  rec-minimal.lua  recognize.lua  reflow.lua  sauvola.lua  show.lua  showseg.lua  tesseract.lua  tesslines.lua  text-to-hocr.lua  train-bpnet-isolated.lua  train-bpnet-lines.lua
ocroscript/scripts/OLD/: align-tesseract.lua  align-transcription.lua  rec-bpnet-isolated.lua  rec-guided.lua  rec-line.lua
ocroscript/scripts/hacks/: eval-editdist-layout.lua  matra-clipping.lua
ocroscript/scripts/lib/: align.lua  datasets.lua  editdist.lua  fst.lua  headings.lua  hocr.lua  paragraphs.lua  path.lua  strict.lua  util.lua  xml.lua
ocroscript/tests/: bigtest-deskewing.lua  bigtest-linerec.lua  bigtest-noiseremoval.lua  bigtest-ops.lua  bigtest-pagerast.lua  bigtest-textimgseg.lua  test-build.lua  test-charseg.lua  test-editdist.lua  test-fst-editdist.lua  test-fst-em.lua  test-fst-search.lua  test-fst-search2.lua  test-fst.lua  test-fstmodels.lua  test-grouper.lua  test-imglib.lua  test-lineseg.lua  test-misc.lua  test-ocrinterfaces.lua  test-pageseg.lua  test-path.lua  test-regionextractor.lua  test-rescore.lua.fail  test-tess.lua  test-xml-escapes.lua  try-dave.lua
python-binding/: ocropus-python.cc
utilities/: check-style  contributors-gadget.xml  datasets-gadget.xml  groups-gadget.xml  install-all  links-form-gadget.xml  links-gadget.xml  ocropus-bash-completion
(+28 files in other folders)
